--- a/starter-code/css pages/graphic-design.css
+++ b/starter-code/css pages/graphic-design.css
@@ -51,6 +51,9 @@ nav{
    align-items: center;
    margin: 64.84px auto 0 auto;
 }
+.menu-toggle{
+    display: none;
+}
 .links {
     display: flex;
     width: 370px;
@@ -161,6 +164,14 @@ nav{
     height: 478px;
     background-color: #FDF3F0;
 } 
+.grid-item:hover{
+    background-color: var(--primary-color-peach);
+    cursor: pointer;
+}
+
+.grid-item:hover h2, .grid-item:hover p {
+    color: #fff;
+}
 
 .grid-item h2 {
     width: 286px;
@@ -395,6 +406,9 @@ hr{
         width: 43rem;
         /* justify-content: space-around; */
     }
+    .menu-toggle{
+        display: none;
+    }
     .logo{
         width: 10rem;
     }
@@ -536,7 +550,7 @@ hr{
 
 @media only screen and (max-width:425px) and (min-width:305px){
     .page{
-        /* overflow-x: hidden; */
+        overflow-x: hidden;
         width: 375px;
         height: 3747px;
     }
@@ -545,6 +559,23 @@ hr{
     }
     nav .links {
         display: none;
+    }
+    .logo{
+        width: 8rem;
+        margin-left: 1.5rem;
+    }
+    .menu-toggle{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        cursor: pointer;
+        margin-right: 2rem;
+        margin-top: -1.7rem;
+    }
+    .humburger{
+        width: 25px;
+        height: 3px;
+        background-color: #000;
     }
 
     .bg-svg{
@@ -628,10 +659,79 @@ hr{
 
 
     footer{
-        /* display: block; */
+        
         width: 375px;
-        height: 875px;
+        height: 866px;
     }
+    nav {
+        display: block;
+        justify-content: center;
+    }
+    footer .logo {
+        position: relative;
+        left: 3rem;
+    }
+    .links-link{
+        width: 15rem;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        top: 5rem;
+        left: 6rem;
+        gap: 2rem;
+    }
+    .links-link a{
+        width: 10rem;
+        display: flex;
+        justify-content: center;
+    }
+    hr {
+        position: relative;
+        width: 327px;
+        margin-top: -5rem;
+        left: 1.5rem;
+    }
+
+    /* .foot{ 
+        width: 327px;
+    } */
+    
+    .foot1{
+        width: 327px;
+        height: 498px;
+        display: block;
+        justify-content: center;
+        align-items: center;
+    }
+    .container1{
+        display: block;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        margin-top: 15rem;
+        margin-left: 3rem;
+        width: 16rem;
+    }
+    .container-direction{
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+        justify-content: center;
+        align-items: center;  
+    }
+    .container-contact{
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer-icons{
+        position: relative;
+        left: 3rem;
+    }
+    
     
     
 }
